<resources>
    <string name="app_name">Pitch, Please</string>
    <string name="action_settings">Settings</string>
    <string name="pitch_player_title">Pitch Player</string>
    <string name="pitch_training_title">Pitch Training</string>
    <string name="interval_training_title">Interval Training</string>
    <string name="composer_id_title">Composer ID</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="composers">﻿Johann_Sebastian_Bach
5aIqB5nVVvmFsvSdExz408

George_Frideric_Handel
1QL7yTHrdahRMpvNtn6rI2

Henry_Purcell
3tMLo1k3iUo82coMLWXzxq

Antonio_Vivaldi
2QOIawHpSlOwXDvSqQ9YJR

Ludwig_van_Beethoven
2wOqMjp9TyABvtHdOSOTUS

Franz_Joseph_Haydn
656RXuyw7CE0dtjdPgjJV6

Wolfgang_Amadeus_Mozart
4NJhFmfw43RLBLjQvxDuRS

Johannes_Brahms
5wTAi7QkpP6kp8a54lmTOq

Frédéric_Chopin
7y97mc3bZRFXzT2szRM4L4

Antonín_Dvořák
6n7nd5iceYpXVwcx8VPpxF

Franz_Liszt
1385hLNbrnbCJGokfH2ac2

Felix_Mendelssohn
6MF58APd3YV72Ln2eVg710

Jacques_Offenbach
4OihBPCQzR4GfbzqOY69Xm

Sergei_Rachmaninoff
0Kekt6CKSo0m5mivKcoH51

Nikolai_Rimsky-Korsakov
2kXJ68O899XvWOBdpzlXgs

Camille_Saint-Saëns
436sYg6CZhNefQJogaXeK0

Franz_Schubert
2p0UyoPfYfI76PCStuXfOP

Robert_Schumann
2UqjDAXnDxejEyE0CzfUrZ

John_Philip_Sousa
6jNyNAMv2gNLnfaP0bzo7y

Johann_Strauss_II
5goS0v24Fc1ydjCKQRwtjM

Pyotr_Ilyich_Tchaikovsky
3MKCzCnpzw3TjUYs2v7vDA

Giuseppe_Verdi
1JOQXgYdQV2yfrhewqx96o

Richard_Wagner
1C1x4MVkql8AiABuTw6DgE

Claude_Debussy
1Uff91EOsvd99rtAupatMP

Maurice_Ravel
17hR0sYHpx7VYTMRfFUOmY

Richard_Strauss
6pAwHPeExeUbMd5w7Iny6D

Ralph_Vaughan_Williams
7wNkISK49lKeXuRaZcQVFe

Samuel_Barber
4XDJurjQCnWLlE7KLZCT9x

Béla_Bartok
5zyNXVd952fWOjkdGHCvPd

Leonard_Bernstein
2LmyJyCF5V1eQyvHgJNbTn

Benjamin_Britten
7MJ1pB5d6Vjmzep2zQlorn

John_Cage
1Z3fF5lZdCM0ZHugkGoH8s

John_Adams
35OhI7DSls022v9Bz9r0VZ

Aaron_Copland
0nJvyjVTb8sAULPYyA1bqU

George_Gershwin
1YuknfkSYTTbolRpwZBOv4

Gustav_Holst
5B7uXBeLc2TkR5Jk23qKIZ

Charles_Ives
73s17iW5LTtXRMVoofi9sU

Scott_Joplin
5FgkTUuCNKDlilidPvZqOq

Dmitry_Kabalevsky
46wMXZ6bEoXUlToxUglEtY

Arnold_Schoenberg
5U827e4jbYz6EjtN0fIDt9

Dmitri_Shostakovich
6s1pCNXcbdtQJlsnM1hRIA

Igor_Stravinsky
7ie36YytMoKtPiL7tUvmoE

John_Williams
3dRfiJ2650SZu6GbydcHNb

Hanz_Zimmer
0YC192cP3KPCRWx8zr8MfZ

Bernard_Herrmann
5bUj39bg0zEbRzjUEISMG9

</string>
    <string name="a">A</string>
    <string name="c">C</string>
    <string name="drag_the_bar_to_the_pitch_being_played">Drag the bar to the pitch being played</string>
    <string name="drag_the_bar_to_the_interval_being_played">Drag the bar to the interval being played</string>
    <string name="score_0">Score: 0</string>
    <string name="start">Start</string>
    <string name="submit">Submit</string>
</resources>
