<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_interval_training"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tech.pitchplease.pitchplease.intervaltraining.IntervalTrainingActivity"
    android:background="@color/colorPrimaryDark"
    >
    <TextView
        android:text="@string/score_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/intervalTrainingTextScore"
        android:textColor="@color/colorText" />

    <TextView
        android:text="@string/drag_the_bar_to_the_interval_being_played"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/intervalTrainingTextDesc"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textAlignment="center"
        android:textColor="@color/colorText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/noteText"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/intervalTrainingBtnStart"
        android:layout_centerHorizontal="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorText"
        android:textAllCaps="false"
        tools:visibility="invisible"
        android:text="@string/a" />

    <Button
        android:text="@string/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:id="@+id/intervalTrainingBtnStart"
        android:background="@color/colorAccent"
        android:textColor="@color/colorText"
        android:layout_below="@+id/intervalTrainingTextDesc"
        android:layout_centerHorizontal="true" />

    <SeekBar
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="9"
        android:progress="0"
        android:id="@+id/intervalTrainingSeek"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/noteText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        tools:visibility="invisible" />

    <Button
        android:text="@string/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/colorAccent"
        android:textColor="@color/colorText"
        android:id="@+id/intervalTrainingBtnSubmit"
        tools:visibility="invisible"
        android:visibility="invisible"
        android:layout_below="@+id/intervalTrainingSeek"
        android:layout_alignLeft="@+id/intervalTrainingBtnStart"
        android:layout_alignStart="@+id/intervalTrainingBtnStart" />

    <ProgressBar
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/intervalTrainingBarCountdown"
        android:progress="300000"
        android:minWidth="148dip"
        android:maxWidth="148dip"
        android:max="300000"
        android:indeterminate="false"
        android:visibility="invisible"
        android:progressDrawable="@drawable/progress"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/intervalTrainingBtnSubmit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
