<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="tech.pitchplease.pitchplease.MenuActivity"
    tools:background="@color/colorPrimaryDark"
    android:background="@color/colorPrimaryDark">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:id="@+id/appBarLayout">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_menu" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabPreferences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        app:srcCompat="@android:drawable/ic_menu_preferences"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        app:backgroundTint="@color/colorAccent"
        app:rippleColor="@color/colorRipple"
        android:visibility="invisible"
        android:clickable="false" />

    <Button
        android:text="@string/pitch_training_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnPitchPlayer"
        android:layout_alignRight="@+id/btnPitchPlayer"
        android:layout_alignEnd="@+id/btnPitchPlayer"
        android:layout_marginTop="30dp"
        android:id="@+id/btnPitchGuesser"
        android:width="250dp"
        android:background="@color/colorAccent"
        android:textColor="@color/colorText" />

    <Button
        android:text="@string/pitch_player_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:id="@+id/btnPitchPlayer"
        tools:width="250dp"
        android:layout_below="@+id/appBarLayout"
        android:layout_centerHorizontal="true"
        android:background="@color/colorAccent"
        android:textColor="@color/colorText" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"
        android:layout_above="@+id/fabPreferences"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:visibility="visible">
    </com.google.android.gms.ads.AdView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnCompGuesser"
        android:width="250dp"
        android:text="@string/composer_id_title"
        android:background="@color/colorAccent"
        android:textColor="@color/colorText"
        android:layout_below="@+id/btnPitchGuesser"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp" />

    <Button
        android:text="@string/interval_training_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnIntervalGuesser"
        android:width="250dp"
        android:background="@color/colorAccent"
        android:textColor="@color/colorText"
        android:visibility="invisible"
        android:layout_marginTop="37dp"
        android:layout_below="@+id/btnCompGuesser"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:clickable="false" />

</RelativeLayout>
